--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
+    <!-- Metadata untuk media sosial -->
+    <meta property="og:title" content="Qilil">
+    <meta property="og:description"
+        content="Photo Wedding Bogor adalah Fotografer & Videografer untuk jasa wedding fotografer dan videografer.">
+    <meta property="og:image" content="https://i.pinimg.com/736x/6d/78/1b/6d781bff93d123b2420c37fe94ecb0d6.jpg">
+    <meta property="og:url" content="https://photoweddingbogor.wowhii.com/">
 
 </head>
 
@@ -92,20 +100,14 @@
     <!-- footer -->
     <footer class="bg-dark text-white" style="width: 100%;">
         <div class="text-center p-3">
-            <span id="tahun-copyright"></span> | <a href="photoweddingbogor.wowhii.com" class="text-light">Qilil</a>
+            <span id="tahun-copyright"></span> | <a href="https://photoweddingbogor.wowhii.com/"
+                class="text-light">Qilil</a>
             - Photo Wedding Bogor
         </div>
     </footer>
 
     <!-- js tahun -->
     <script>var tahunSekarang = (new Date).getFullYear(); document.getElementById("tahun-copyright").innerHTML = "© " + tahunSekarang;</script>
-
-
-
-
-
-
-
 
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
